# QCameraBug

./: CMakeLists.txt  README.md  cannyfilter.cpp  cannyfilter.hpp  main.cpp  main.qml
